--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,29 +1,35 @@
+How to use</br>
+<br />
+<li>Open a browser</li>
+<li>Copy and paste this link:  http://ridgeback.herokuapp.com/lists/search/<beginning_code>/<ending_code></li>
+<li>Example:  <a href="http://ridgeback.herokuapp.com/lists/search/11134677/11134680">http://ridgeback.herokuapp.com/lists/search/11134677/11134680</a></li>
+<li>Do only about 200 at a time</li>
+<li>Only products that are equal to $150.00 will be logged</li>
+
+<br />
+<br />
+<br />
+<br />
+<br />
+
 <table>
   <thead>
     <tr>
-      <th>Name</th>
       <th>Price</th>
-      <th>Url</th>
       <th>Code</th>
-      <th colspan="3"></th>
+      <th>Last updated</th>
     </tr>
   </thead>
 
   <tbody>
     <% @lists.each do |list| %>
       <tr>
-        <td><%= list.shopping_bag_item_info_green %></td>
         <td><%= list.merchandise_amount %></td>
-        <td><%= link_to 'list.url', list.url %></td>
-        <td><%= list.code %></td>
-        <td><%= link_to 'Show', list %></td>
-        <td><%= link_to 'Edit', edit_list_path(list) %></td>
-        <td><%= link_to 'Destroy', list, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to list.url, list.url %></td>
+		<td><%= list.updated_at.strftime("%m-%d-%y at %H:%M %Z") %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
 <br>
-
-<%= link_to 'New List', new_list_path %>
