--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,10 +1,9 @@
 How to use</br>
 <br />
 <li>Open a browser</li>
-<li>Copy and paste this link:  http://ridgeback.herokuapp.com/lists/search/<beginning_code>/<ending_code></li>
-<li>Example:  <a href="http://ridgeback.herokuapp.com/lists/search/11134677/11134680">http://ridgeback.herokuapp.com/lists/search/11134677/11134680</a></li>
+<li>Copy and paste this link:  http://radiant-ocean-1342.herokuapp.com/lists/search/<beginning_code>/<ending_code></li>
+<li>Example:  <a href="http://radiant-ocean-1342.herokuapp.com/lists/search/11134677/11134680">http://ridgeback.herokuapp.com/lists/search/11134677/11134680</a></li>
 <li>Do only about 200 at a time</li>
-<li>Only products that are equal to $150.00 will be logged</li>
 
 <br />
 <br />
