--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,7 +2,7 @@ How to use</br>
 <br />
 <li>Open a browser</li>
 <li>Copy and paste this link:  http://radiant-ocean-1342.herokuapp.com/lists/search/<beginning_code>/<ending_code></li>
-<li>Example:  <a href="http://radiant-ocean-1342.herokuapp.com/lists/search/11134677/11134680">http://ridgeback.herokuapp.com/lists/search/11134677/11134680</a></li>
+<li>Example:  <a href="http://radiant-ocean-1342.herokuapp.com/lists/search/11134677/11134680">http://radiant-ocean-1342.herokuapp.com/lists/search/11134677/11134680</a></li>
 <li>Do only about 200 at a time</li>
 
 <br />
